<resources>
    <string name="app_name">Ease Work</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tab_1">Home</string>
    <string name="tab_2">Plan</string>
    <string name="tab_3">Programm</string>
    <string name="tab_4">Chat</string>
    <string name="tab_5">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="send_otp">Send Otp</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_new_password_again">Enter new password again</string>
    <string name="change_password">Change Password</string>
    <string name="please_enter_the_otp_below">Please enter the OTP below:</string>
    <string name="submit">Submit</string>
    <string name="enter_your_registered_mobile_no">Enter your registered mobile no</string>
    <string name="registration">Registration</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_charge">Enter your charge</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="enter_your_profession">Enter your profession</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_account_register">Don\'t have account? Register</string>
    <string name="or">OR</string>
    <string name="login_with_mobile_number">Login With Mobile number</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="what_re_you_looking_for">What\'re you looking for?</string>
</resources>
