<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mvvm.easework.ui.login.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_16sdp">


            <androidx.cardview.widget.CardView
                android:id="@+id/layoutlog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardMaxElevation="8dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="30dp"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">


                        <ImageView
                            android:id="@+id/loginlogo"
                            android:layout_width="175dp"
                            android:layout_height="129dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="50dp"
                            android:background="@drawable/logo"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginVertical="10dp"
                            android:text="@string/login"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/Uname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textEmailAddress"
                                android:hint="@string/enter_your_email"
                                android:drawableStart="@drawable/email_pic">

                            </com.google.android.material.textfield.TextInputEditText>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/Upassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:hint="@string/enter_your_password"
                                android:drawableStart="@drawable/otp">

                            </com.google.android.material.textfield.TextInputEditText>

                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/txt_forgot_password"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="@string/forgot_password"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/loginbutton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="32dp"
                            android:paddingRight="32dp"
                            android:text="Login"
                            android:textAllCaps="false"
                            android:layout_margin="8dp"
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:textSize="16sp" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/lreg"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="8dp"
                        android:singleLine="false"
                        android:text="@string/don_t_have_account_register"
                       android:textSize="14sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/or"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@color/black" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:drawablePadding="8dp"
                        android:gravity="center"
                        android:id="@+id/txt_login_with_mobile"
                        android:text="@string/login_with_mobile_number"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/ic_baseline_call_24" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>