<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    <variable
        name="viewModel"
        type="com.mvvm.easework.ui.forgotpwd.ForgotPwdViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include
            android:id="@+id/ilToolBar"
            layout="@layout/toolbar_app" />

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:visibility="visible"
            app:cardMaxElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:id="@+id/mobile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobile"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mobile"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:text="@string/send_otp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/create_new_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_new_password" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/re_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_re_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/enter_new_password_again" />


                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_change_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/re_password"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:text="@string/change_password"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/otp_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_enter_the_otp_below"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.mvvm.easework.utils.customs.OtpEditText
                    android:id="@+id/otp_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt"
                    android:inputType="number"
                    android:layout_marginTop="8dp"
                    android:maxLength="6" />

                <Button
                    android:id="@+id/btn_otp_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/otp_edt"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/reg_otp_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:padding="4dp">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/reg_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Please enter the OTP below:"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/reg_otp_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reg_txt"
                    android:layout_marginTop="8dp"
                    android:inputType="number"
                    android:maxLength="6" />


                <Button
                    android:id="@+id/reg_btn_otp_submit"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reg_otp_edt"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:text="Submit"
                    android:textAllCaps="false"
                    android:textColor="@color/purple_700"
                    android:textSize="16dp" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</layout>